add second changes

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 
     <main>
       <h2>Section 2.1</h2>
-      <p class="question">1. What is the most important reason for doing a vehicle inspection?</p>
-      <p class="answer">A. Safety</p>
-      <p class="question">2. What things should you check during a trip?</p>
-      <p class="answer">A. Tires, wheels and rims. Brakes, lights and reflectors.</p>
-      <p class="question">3. Name some key steering system parts</p>
-      <p class="answer">A. Steering wheel, steering shaft, gear box.</p>
-      <p class="question">4. Name some suspension system defects</p>
-      <p class="answer">A. Cracked or broken spring hangers, leaking shock absorbers, broken leaves.</p>
-      <p class="question">5. What three kinds of emergency equipment must you have?</p>
-      <p class="answer">A. Fire extinguishers, spare electrical fuses, 3 reflective warning triangles.</p>
-      <p class="question">6. What is the minimum tread depth for front tires? For other tires?</p>
-      <p class="answer">A. At least 4/32 inch tread depth on front tires. At least 2/32 inch on other tires.</p>
+      <p class="question"><span class="capital">1.</span> What is the most important reason for doing a vehicle inspection?</p>
+      <p class="answer"><span class="capital">A.</span> Safety</p>
+      <p class="question"><span class="capital">2.</span> What things should you check during a trip?</p>
+      <p class="answer"><span class="capital">A.</span> Tires, wheels and rims. Brakes, lights and reflectors.</p>
+      <p class="question"><span class="capital">3.</span> Name some key steering system parts</p>
+      <p class="answer"><span class="capital">A.</span> Steering wheel, steering shaft, gear box.</p>
+      <p class="question"><span class="capital">4.</span> Name some suspension system defects</p>
+      <p class="answer"><span class="capital">A.</span> Cracked or broken spring hangers, leaking shock absorbers, broken leaves.</p>
+      <p class="question"><span class="capital">5.</span> What three kinds of emergency equipment must you have?</p>
+      <p class="answer"><span class="capital">A.</span> Fire extinguishers, spare electrical fuses, 3 reflective warning triangles.</p>
+      <p class="question"><span class="capital">6.</span> What is the minimum tread depth for front tires? For other tires?</p>
+      <p class="answer"><span class="capital">A.</span> At least 4/32 inch tread depth on front tires. At least 2/32 inch on other tires.</p>
     </main>
 
     <footer><p>Made with <span class="love">&hearts;
